@@ -1,17 +1,27 @@
 [![pre-commit](https://img.shields.io/badge/pre--commit-enabled-brightgreen?logo=pre-commit&logoColor=white)](https://github.com/dustinsand/pre-commit-jvm)
 
-pre-commit-jvm
+pre-commit-kotlin
 ===============
 
-A collection of git hooks for the JVM to be used with the [pre-commit framework](http://pre-commit.com).
+A collection of git hooks for kotlin to be used with the [pre-commit framework](http://pre-commit.com).
 
 ## Requirements
 
-pre-commit-jvm requires the following to run:
-
-  * [pre-commit(2.8+)](http://pre-commit.com)
+  * [pre-commit](http://pre-commit.com)
   * [Coursier](https://get-coursier.io/)
+  
+### pre-commit
+    
+    * pip install pre-commit
 
+### Coursier
+    
+    * curl -fL "https://github.com/coursier/launchers/raw/master/cs-x86_64-pc-linux.gz" | gzip -d > cs
+    * chmod +x cs
+    * ./cs setup
+    * add export PATH="$PATH:$HOME/.local/share/coursier/bin" to zshrc or bashrc
+
+    
 ## Install
 
 1. create `.pre-commit-config.yaml` in your git project
@@ -20,17 +30,14 @@ pre-commit-jvm requires the following to run:
 example `.pre-commit-config.yaml`:
 
 ```yaml
-- repo: https://github.com/dustinsand/pre-commit-jvm
-  rev: vX.X.X
-  hooks:
-    - id: detekt
-      args: [--config, detekt-config.yml]
-    - id: google-java-formatter-jdk11
-      args: [--replace, --set-exit-if-changed]
-    - id: ktlint
-      args: [--format]
-    - id: pmd
-      args: [ -rulesets, pmd-ruleset.xml, -language, java, -cache, .pmd/cache, -dir, src/main/java, -f, textcolor ]
+repos:
+  - repo: https://github.com/alexanderpichler-cpi/pre-commit-kotlin
+    rev: v1.0.1
+    hooks:
+      - id: detekt
+        args: [--build-upon-default-config, --config, lint/config/detekt.yml]
+      - id: ktlint
+        entry: bash -c ' export JDK_JAVA_OPTIONS="--add-opens=java.base/java.lang=ALL-UNNAMED" && ktlint --format  --editorconfig=lint/config/.editorconfig'
 ```
 
 ## Available Hooks
@@ -38,10 +45,7 @@ example `.pre-commit-config.yaml`:
 | Hook name       | Description                                                                                        |
 | --------------- | -------------------------------------------------------------------------------------------------- |
 | `detekt`           | Runs [Detekt](https://detekt.github.io/detekt/) static code analyzer on Kotlin source files. |
-| `google-java-formatter-jdk8`           | Runs [Google Java Formatter](https://github.com/google/google-java-format) to reformat Java source code to comply with [Google Java Style](https://google.github.io/styleguide/javaguide.html).  Minimum supported runtime version is JDK 8. |
-| `google-java-formatter-jdk11`           | Runs [Google Java Formatter](https://github.com/google/google-java-format) to reformat Java source code to comply with [Google Java Style](https://google.github.io/styleguide/javaguide.html).  Minimum supported runtime version is JDK 11. |
 | `ktlint`           | Runs [Ktlint](https://ktlint.github.io/) to lint and reformat Kotlin source code. |
-| `pmd`           | Runs [PMD](https://pmd.github.io/) static code analyzer on Java source files. |
 
 ### Notes about the `detekt` hook
 
@@ -54,25 +58,6 @@ To specify a custom detekt configuration, simply pass the argument to the hook:
 
 Other [CLI](https://arturbosch.github.io/detekt/cli.html) arguments are also supported.
 
-### Notes about the `google-java-formatter-jdk[version]` hook
-
-Minimum required arguments for the hook:
-
-```yaml
-    - id: google-java-formatter-jdk[version]
-      args: [--replace, --set-exit-if-changed]
-```
-
-Other [CLI](https://github.com/google/google-java-format) arguments are also supported. 
-
-You can also use Coursier to get the list of options.
-```
-[JDK 8]
-cs launch com.google.googlejavaformat:google-java-format:1.7 -- --help
-
-[JDK 11+]
-cs launch com.google.googlejavaformat:google-java-format:1.9 -- --help
-```
 
 ### Notes about the `ktlint` hook
 
@@ -87,21 +72,6 @@ Other [CLI](https://ktlint.github.io/#getting-started) arguments are also suppor
 
 You can also use Coursier to get the list of options.
 ```
-cs launch com.pinterest:ktlint:0.39.0 -M com.pinterest.ktlint.Main -- --help
+cs launch com.pinterest:ktlint:v.x.x.x -M com.pinterest.ktlint.Main -- --help
 ```
 
-### Notes about the `pmd` hook
-
-Required arguments for the hook:
-
-| Argument | Description |
-| -------- | -------------------------------------------- |
-| dir | Root directory for sources.                       |
-| rulesets | Comma separated list of ruleset names to use.| 
-
-```yaml
-    - id: pmd
-      args: [ -dir, src/main/java, -rulesets, pmd-ruleset.xml ]
-```
-
-Other [CLI](https://pmd.github.io/latest/pmd_userdocs_installation.html) arguments are also supported.
